--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,10 +1,8 @@
-name: Python application
+name: Python CI
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  - push
+  - pull_request
 
 jobs:
   build:
@@ -13,7 +11,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: [3.9, 3.10]
+        python-version: ["3.9", "3.10"]
 
     steps:
     - uses: actions/checkout@v4
