--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ gendiff = "gendiff.scripts.gendiff:main"
 [tool.poetry.dependencies]
 python = "^3.10"
 argparse = "^1.4.0"
+pytest-cov = "^4.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
