--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ gendiff = "gendiff.scripts.gendiff:main"
 python = "^3.10"
 argparse = "^1.4.0"
 pytest-cov = "^4.1.0"
+pyyaml = "^6.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
